Fixing header on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ header {
       margin-bottom: 20px; }
       @media screen and (max-width: 400px) {
         header div h2 {
-          padding-right: 20px; } }
+          padding-right: 40px; } }
   header nav {
     flex: 9 auto;
     text-align: center; }
@@ -103,7 +103,7 @@ header {
           border-right: none; }
         @media screen and (max-width: 480px) {
           header nav ul li {
-            font-size: 34px; } }
+            font-size: 24px; } }
         @media screen and (min-width: 481px) and (max-width: 640px) {
           header nav ul li {
             font-size: 20px;
